@@ -57,13 +57,13 @@ _def_menu_style=( "$_last_menu_style[@]"
 _last_menu_style=()
 
 zstyle -s ":completion:${curcontext}:default" list-prompt LISTPROMPT ||
-    LISTPROMPT='Current position at %P    Continue? '
+    LISTPROMPT='%SCurrent position at %p: continue? %s'
 if [[ -n "$LISTPROMPT" ]]; then
   zmodload -i zsh/complist
   compstate[list_max]=scroll
 fi
 zstyle -s ":completion:${curcontext}:default" select-prompt SELECTPROMPT ||
-    SELECTPROMPT='%SScrolling active: current selection at %p'
+    SELECTPROMPT='%SScrolling active: current selection at %p%s'
 zstyle -s ":completion:${curcontext}:default" select-scroll SELECTSCROLL ||
     SELECTSCROLL=1
 
